reports/scouting/2026-05-04/wickford_cc/v3/scout.md
# Scout — Wickford CC 1st XI (v3)

_All sections: 1st XI only, League + Cup unless noted. Compared vs Rainham CC, Essex 1st XI. Today 2026-05-04._

## 0. Current league table

_Essex League — Division 05 - 1st XI Division Four_

| Pos | Team | P | W | Pts | Form |
|--:|------|--:|--:|---:|------|
| 1 | Benfleet CC | 0 | 0 | 0 | — |
| 2 | Bow Green CC | 0 | 0 | 0 | — |
| 3 | Hawks CC | 0 | 0 | 0 | — |
| 4 | London Eagles CC | 0 | 0 | 0 | — |
| 5 | Rainham CC, Essex | 0 | 0 | 0 | — |
| 6 | Redbridge CC | 0 | 0 | 0 | — |
| 7 | Roding Valley CC | 0 | 0 | 0 | — |
| 8 | South Woodford CC | 0 | 0 | 0 | — |
| 9 | Spartans CC, Essex | 0 | 0 | 0 | — |
| 10 | **Wickford CC** | 0 | 0 | 0 | — |

## 1. Last 3 seasons — 1st XI league finishing positions

| Season | League / Division | Pos | P | W | L | D | NR | Win% |
|--:|---|--:|--:|--:|--:|--:|--:|--:|
| 2024 | Essex League — Division 04 - 1st XI Division Three | 9/10 | 18 | 4 | 11 | 1 | 1 | 22.2% |
| 2025 | Essex League — Division 05 - 1st XI Division Four | 5/10 | 18 | 7 | 6 | 2 | 1 | 38.9% |
| 2026 | Essex League — Division 05 - 1st XI Division Four | 10/10 | 0 | 0 | 0 | 0 | 0 | 0.0% |

## 2. Top run scorers — last 3 seasons (1st XI, L+C)

| # | Player | M | I | NO | Runs | HS | Avg | SR | 50 | 100 | Pos |
|--:|--------|--:|--:|--:|---:|---:|---:|---:|--:|--:|--:|
| 1 | [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/batting/6146888?rule_type_id=179) | 17 | 17 | 3 | **1084** | 146 | 77.43 | 110.1 | 5 | 5 | 4 |
| 2 | [Zisan Abedin](https://wickford.play-cricket.com/player_stats/batting/4588171?rule_type_id=179) | 32 | 32 | 3 | **900** | 114 | 31.03 | 81.6 | 3 | 1 | 4 |
| 3 | [Frankie Mckenna](https://wickford.play-cricket.com/player_stats/batting/4836368?rule_type_id=179) | 33 | 33 | 3 | **856** | 112 | 28.53 | 70.2 | 2 | 1 | 5 |
| 4 | [Jack Stead](https://wickford.play-cricket.com/player_stats/batting/6290399?rule_type_id=179) | 26 | 26 | 5 | **638** | 89 | 30.38 | 79.9 | 5 | 0 | 5 |
| 5 | [Tom Merritt](https://wickford.play-cricket.com/player_stats/batting/5834723?rule_type_id=179) | 28 | 28 | 1 | **573** | 64 | 21.22 | 57.7 | 1 | 0 | 1 |
| 6 | [Adam Deller](https://wickford.play-cricket.com/player_stats/batting/449523?rule_type_id=179) | 12 | 12 | 2 | **293** | 89 | 29.30 | 57.2 | 2 | 0 | 7 |
| 7 | [Tom Matthew](https://wickford.play-cricket.com/player_stats/batting/3876668?rule_type_id=179) | 16 | 16 | 1 | **246** | 40 | 16.40 | 63.7 | 0 | 0 | 2 |
| 8 | [Chirag Desai](https://wickford.play-cricket.com/player_stats/batting/5323679?rule_type_id=179) | 21 | 21 | 3 | **220** | 46 | 12.22 | 49.4 | 0 | 0 | 1 |
| 9 | [Tony Munyonga](https://wickford.play-cricket.com/player_stats/batting/4332729?rule_type_id=179) | 7 | 7 | 1 | **178** | 56 | 29.67 | 62.6 | 2 | 0 | 3 |
| 10 | [John Grimes](https://wickford.play-cricket.com/player_stats/batting/5455747?rule_type_id=179) | 20 | 20 | 6 | **177** | 33 | 12.64 | 59.0 | 0 | 0 | 8 |
| 11 | [Ronnie McKenna](https://wickford.play-cricket.com/player_stats/batting/5625071?rule_type_id=179) | 2 | 2 | 1 | **164** | 82 | 164.00 | 146.4 | 2 | 0 | 3 |
| 12 | [Alexander Moss](https://wickford.play-cricket.com/player_stats/batting/135511?rule_type_id=179) | 10 | 10 | 0 | **150** | 38 | 15.00 | 53.4 | 0 | 0 | 2 |
| 13 | [Elliot Yorston](https://wickford.play-cricket.com/player_stats/batting/5618490?rule_type_id=179) | 14 | 14 | 4 | **123** | 22 | 12.30 | 64.1 | 0 | 0 | 10 |
| 14 | [Greg Mendham](https://wickford.play-cricket.com/player_stats/batting/3275724?rule_type_id=179) | 8 | 8 | 0 | **112** | 51 | 14.00 | 52.5 | 1 | 0 | 2 |
| 15 | [Connor Etchells](https://wickford.play-cricket.com/player_stats/batting/5671181?rule_type_id=179) | 8 | 8 | 1 | **108** | 37 | 15.43 | 75.0 | 0 | 0 | 7 |

## 3. Top wicket takers — last 3 seasons (1st XI, L+C)

| # | Bowler | M | Overs | Mdns | Runs | Wkts | Avg | Econ | Best | 5wi | 4wi |
|--:|--------|--:|--:|--:|---:|---:|---:|---:|----|--:|--:|
| 1 | [Zisan Abedin](https://wickford.play-cricket.com/player_stats/bowling/4588171?rule_type_id=179) | 29 | 273.4 | 20 | 1142 | **42** | 27.19 | 4.17 | 5/32 | 2 | 0 |
| 2 | [John Grimes](https://wickford.play-cricket.com/player_stats/bowling/5455747?rule_type_id=179) | 26 | 204 | 10 | 942 | **38** | 24.79 | 4.62 | 4/45 | 0 | 2 |
| 3 | [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/bowling/6146888?rule_type_id=179) | 14 | 133.5 | 13 | 578 | **29** | 19.93 | 4.32 | 6/28 | 2 | 0 |
| 4 | [Porag Hasan](https://wickford.play-cricket.com/player_stats/bowling/6338427?rule_type_id=179) | 16 | 124.5 | 16 | 550 | **20** | 27.50 | 4.41 | 3/31 | 0 | 0 |
| 5 | [Chirag Desai](https://wickford.play-cricket.com/player_stats/bowling/5323679?rule_type_id=179) | 19 | 147.2 | 15 | 587 | **20** | 29.35 | 3.98 | 3/36 | 0 | 0 |
| 6 | [Josh Spooner](https://wickford.play-cricket.com/player_stats/bowling/1792129?rule_type_id=179) | 9 | 69.1 | 9 | 359 | **14** | 25.64 | 5.19 | 3/42 | 0 | 0 |
| 7 | [Andrew Metcalfe](https://wickford.play-cricket.com/player_stats/bowling/5060749?rule_type_id=179) | 11 | 76 | 6 | 394 | **12** | 32.83 | 5.18 | 3/35 | 0 | 0 |
| 8 | [Connor Etchells](https://wickford.play-cricket.com/player_stats/bowling/5671181?rule_type_id=179) | 6 | 34.5 | 4 | 149 | **9** | 16.56 | 4.28 | 6/27 | 1 | 0 |
| 9 | [Tony Munyonga](https://wickford.play-cricket.com/player_stats/bowling/4332729?rule_type_id=179) | 7 | 57 | 7 | 232 | **9** | 25.78 | 4.07 | 3/34 | 0 | 0 |
| 10 | [Elliot Yorston](https://wickford.play-cricket.com/player_stats/bowling/5618490?rule_type_id=179) | 13 | 62.5 | 1 | 300 | **9** | 33.33 | 4.77 | 3/52 | 0 | 0 |
| 11 | [Adam Deller](https://wickford.play-cricket.com/player_stats/bowling/449523?rule_type_id=179) | 7 | 38.3 | 0 | 199 | **8** | 24.88 | 5.17 | 3/31 | 0 | 0 |
| 12 | [Hayden Briggs](https://wickford.play-cricket.com/player_stats/bowling/5569062?rule_type_id=179) | 6 | 32 | 0 | 171 | **6** | 28.50 | 5.34 | 1/9 | 0 | 0 |

## 4. Head-to-head vs Rainham CC, Essex 1st XI (any era in cache)

**Wickford CC 1 — 1 Rainham CC, Essex**, draws/abandoned 0.

| Date | Comp | Venue (for them) | Result | Detail |
|---|---|---|---|---|
| 06/09/2025 | League | H | W | Wickford CC - Saturday 1st XI - Overs Win |
| 21/06/2025 | League | A | L | Rainham CC, Essex - 1st XI - Time Win (bat 1st) |

**Upcoming fixtures:**
- 16/05/2026 (League, A)
- 01/08/2026 (League, H)

## 5. Last 20 1st XI played matches (L+C)

- **W** [02/05/2026](https://play-cricket.com/website/results/7675565) · Cup · H vs **Brentwood CC** — Brentwood 205/8 (40.0) · Wickford 208/6 (29.2)
  - 🏏 [Ronnie McKenna](https://wickford.play-cricket.com/player_stats/batting/5625071?rule_type_id=179) **82*** (71b, #3)
  - 🎯 [Sazeeb Badreodoha Rafit](https://wickford.play-cricket.com/player_stats/bowling/4982110?rule_type_id=179) **3/18** (8.0ov)
- **W** [25/04/2026](https://play-cricket.com/website/results/7246934) · Cup · A vs **Belhus CC** — Belhus 188/8 (40) · Wickford 194/3 (23.2)
  - 🏏 [Ronnie McKenna](https://wickford.play-cricket.com/player_stats/batting/5625071?rule_type_id=179) **82** (41b, #3) · [Greg Mendham](https://wickford.play-cricket.com/player_stats/batting/3275724?rule_type_id=179) **51** (64b, #2)
  - 🎯 [Adam Deller](https://wickford.play-cricket.com/player_stats/bowling/449523?rule_type_id=179) **3/31** (8ov)
- **W** [06/09/2025](https://play-cricket.com/website/results/7017085) · League · H vs **Rainham CC** — Wickford 210/10 (46.0) · Rainham 185/10 (45.2)
  - 🏏 [Jack Stead](https://wickford.play-cricket.com/player_stats/batting/6290399?rule_type_id=179) **88*** (103b, #5)
  - 🎯 [Chirag Desai](https://wickford.play-cricket.com/player_stats/bowling/5323679?rule_type_id=179) **2/23** (7.0ov)
- **W** [30/08/2025](https://play-cricket.com/website/results/7017079) · League · A vs **Harlow Town CC** — Harlow Town 211/8 (50.0) · Wickford 183/4 (35.2)
  - 🏏 [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/batting/6146888?rule_type_id=179) **75*** (76b, #4)
  - 🎯 [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/bowling/6146888?rule_type_id=179) **3/40** (10.0ov) · [Josh Spooner](https://wickford.play-cricket.com/player_stats/bowling/1792129?rule_type_id=179) **3/42** (8.0ov)
- **L** [23/08/2025](https://play-cricket.com/website/results/7017072) · League · A vs **Frenford CC** — Wickford 249/10 (49.5) · Frenford 252/5 (47.2)
  - 🏏 [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/batting/6146888?rule_type_id=179) **59** (54b, #5)
  - 🎯 [Zisan Abedin](https://wickford.play-cricket.com/player_stats/bowling/4588171?rule_type_id=179) **1/34** (9.0ov)
- **W** [16/08/2025](https://play-cricket.com/website/results/7017070) · League · H vs **Hawks CC** — Wickford 420/7 (50.0) · Hawks 108/9 (25.4)
  - 🏏 [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/batting/6146888?rule_type_id=179) **130** (75b, #3) · [Tom Merritt](https://wickford.play-cricket.com/player_stats/batting/5834723?rule_type_id=179) **64** (58b, #1) · [Jack Stead](https://wickford.play-cricket.com/player_stats/batting/6290399?rule_type_id=179) **50** (37b, #6)
  - 🎯 [John Grimes](https://wickford.play-cricket.com/player_stats/bowling/5455747?rule_type_id=179) **4/57** (10.0ov) · [Porag Hasan](https://wickford.play-cricket.com/player_stats/bowling/6338427?rule_type_id=179) **3/31** (10.0ov)
- **L** [09/08/2025](https://play-cricket.com/website/results/7017061) · League · A vs **Benfleet CC** — Benfleet 252/2 (47) · Wickford 153/10 (36.3)
  - 🏏 [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/batting/6146888?rule_type_id=179) **82** (95b, #3)
  - 🎯 [Porag Hasan](https://wickford.play-cricket.com/player_stats/bowling/6338427?rule_type_id=179) **1/33** (6ov)
- **W** [02/08/2025](https://play-cricket.com/website/results/7017058) · League · A vs **Hawks CC** — Wickford 224/9 (49.5) · Hawks 117/10 (49.3)
  - 🏏 [Zisan Abedin](https://wickford.play-cricket.com/player_stats/batting/4588171?rule_type_id=179) **75** (86b, #4)
  - 🎯 [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/bowling/6146888?rule_type_id=179) **6/28** (14.4ov)
- **L** [26/07/2025](https://play-cricket.com/website/results/7017055) · League · H vs **Frenford CC** — Frenford 254/8 (50.0) · Wickford 174/10 (42.0)
  - 🏏 [Tom Merritt](https://wickford.play-cricket.com/player_stats/batting/5834723?rule_type_id=179) **39** (#1)
  - 🎯 [Zisan Abedin](https://wickford.play-cricket.com/player_stats/bowling/4588171?rule_type_id=179) **2/39** (11ov)
- **NR** [19/07/2025](https://play-cricket.com/website/results/7017050) · League · H vs **Harlow Town CC** — —
- **D** [12/07/2025](https://play-cricket.com/website/results/7017045) · League · A vs **Roding Valley CC** — Wickford 281/6 (50.0) · Roding Valley 230/8 (45.0)
  - 🏏 [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/batting/6146888?rule_type_id=179) **94** (77b, #4) · [Adam Deller](https://wickford.play-cricket.com/player_stats/batting/449523?rule_type_id=179) **89** (118b, #3)
  - 🎯 [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/bowling/6146888?rule_type_id=179) **2/21** (5.0ov)
- **W** [05/07/2025](https://play-cricket.com/website/results/7017040) · League · H vs **Redbridge CC** — Redbridge 223/10 (48.2) · Wickford 224/9 (35.2)
  - 🏏 [Bradley Barrick](https://wickford.play-cricket.com/player_stats/batting/5956525?rule_type_id=179) **60** (32b, #5)
  - 🎯 [Andrew Metcalfe](https://wickford.play-cricket.com/player_stats/bowling/5060749?rule_type_id=179) **3/35** (9.0ov) · [Porag Hasan](https://wickford.play-cricket.com/player_stats/bowling/6338427?rule_type_id=179) **3/43** (9.2ov)
- **D** [28/06/2025](https://play-cricket.com/website/results/7017032) · League · A vs **South Woodford CC** — Wickford 327/5 (50.0) · South Woodford 288/7 (45.0)
  - 🏏 [Zisan Abedin](https://wickford.play-cricket.com/player_stats/batting/4588171?rule_type_id=179) **114** (84b, #6) · [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/batting/6146888?rule_type_id=179) **108*** (96b, #4)
  - 🎯 [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/bowling/6146888?rule_type_id=179) **6/58** (11.0ov)
- **L** [21/06/2025](https://play-cricket.com/website/results/7017027) · League · A vs **Rainham CC** — Rainham 247/10 (45.5) · Wickford 240/10 (48.2)
  - 🏏 [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/batting/6146888?rule_type_id=179) **105** (89b, #4)
  - 🎯 [John Grimes](https://wickford.play-cricket.com/player_stats/bowling/5455747?rule_type_id=179) **3/35** (11.0ov) · [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/bowling/6146888?rule_type_id=179) **3/53** (11.5ov)
- **L** [14/06/2025](https://play-cricket.com/website/results/7017025) · League · H vs **Walthamstow CC** — Wickford 266/7 (50.0) · Walthamstow 267/5 (43.2)
  - 🏏 [Jack Stead](https://wickford.play-cricket.com/player_stats/batting/6290399?rule_type_id=179) **77*** (79b, #5)
  - 🎯 [John Grimes](https://wickford.play-cricket.com/player_stats/bowling/5455747?rule_type_id=179) **2/43** (9.0ov)
- **A** [07/06/2025](https://play-cricket.com/website/results/7017020) · League · A vs **Walthamstow CC** — Wickford 162/10 (42.1) · Walthamstow 0/0 (0.0)
  - 🏏 [Adam Deller](https://wickford.play-cricket.com/player_stats/batting/449523?rule_type_id=179) **47** (75b, #3)
- **L** [31/05/2025](https://play-cricket.com/website/results/7017015) · League · H vs **Benfleet CC** — Benfleet 199/10 (46.3) · Wickford 163/10 (46.4)
  - 🏏 [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/batting/6146888?rule_type_id=179) **77** (85b, #4)
  - 🎯 [Chirag Desai](https://wickford.play-cricket.com/player_stats/bowling/5323679?rule_type_id=179) **3/36** (10.0ov)
- **W** [24/05/2025](https://play-cricket.com/website/results/7017010) · League · H vs **South Woodford CC** — Wickford 318/8 (50.0) · South Woodford 246/10 (44.4)
  - 🏏 [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/batting/6146888?rule_type_id=179) **146** (126b, #4)
  - 🎯 [Zisan Abedin](https://wickford.play-cricket.com/player_stats/bowling/4588171?rule_type_id=179) **3/21** (6.0ov) · [John Grimes](https://wickford.play-cricket.com/player_stats/bowling/5455747?rule_type_id=179) **3/47** (10.0ov)
- **W** [17/05/2025](https://play-cricket.com/website/results/7017003) · League · A vs **Redbridge CC** — Redbridge 79/10 (24.5) · Wickford 80/1 (18.0)
  - 🏏 [Jack Hart](https://wickford.play-cricket.com/player_stats/batting/6472887?rule_type_id=179) **35** (49b, #1)
  - 🎯 [Connor Etchells](https://wickford.play-cricket.com/player_stats/bowling/5671181?rule_type_id=179) **6/27** (6.5ov) · [John Grimes](https://wickford.play-cricket.com/player_stats/bowling/5455747?rule_type_id=179) **3/32** (10.0ov)
- **T** [10/05/2025](https://play-cricket.com/website/results/7017000) · League · H vs **Roding Valley CC** — Wickford 279/4 (50.0) · Roding Valley 279/10 (50.0)
  - 🏏 [Jatin Kukreja](https://wickford.play-cricket.com/player_stats/batting/6146888?rule_type_id=179) **108*** (99b, #4) · [Frankie Mckenna](https://wickford.play-cricket.com/player_stats/batting/4836368?rule_type_id=179) **61*** (50b, #6)
  - 🎯 [Porag Hasan](https://wickford.play-cricket.com/player_stats/bowling/6338427?rule_type_id=179) **3/44** (10.0ov) · [Zisan Abedin](https://wickford.play-cricket.com/player_stats/bowling/4588171?rule_type_id=179) **3/51** (9.0ov)

## 6. Patterns

### 6a. First-innings totals — last 10 of each quadrant

_The runs the team batting first put up. Avg shown prominently, median in brackets._

| | at Home | Away |
|---|---|---|
| Wickford CC **bat 1st**<br>_own first innings_ | **243** (med 229) <br><sub>n=10 · Jun '24 → Sep '25</sub> | **216** (med 204.5) <br><sub>n=10 · Jun '24 → Aug '25</sub> |
| Wickford CC **bowl 1st**<br>_opponent's first innings_ | **203** (med 214) <br><sub>n=10 · May '23 → May '26</sub> | **215** (med 219) <br><sub>n=10 · Aug '23 → Apr '26</sub> |

### 6b. When batting first vs second (last 3 seasons L+C)

- Wickford CC batting 1st: 21 played, 6W / 10L / 4D / 1NR — win rate 29%
- Wickford CC batting 2nd: 16 played, 7W / 8L / 1NR — win rate 44%
- Rainham CC, Essex batting 1st: 17 played, 8W / 7L / 1D / 1NR — win rate 47%
- Rainham CC, Essex batting 2nd: 19 played, 7W / 10L / 1D / 1NR — win rate 37%

### 6c. Home vs away (last 3 seasons L+C)

- Wickford CC at home: 19 played, 7W / 8L / 1D / 3NR — win rate 37%
- Wickford CC away: 20 played, 6W / 10L / 3D / 1NR — win rate 30%
- Rainham CC, Essex at home: 19 played, 9W / 6L / 1D / 3NR — win rate 47%
- Rainham CC, Essex away: 19 played, 6W / 11L / 1D / 1NR — win rate 32%

### 6d. When they win the toss

**Won toss in 24 matches** — chose to bat 14 (58%), chose to field 10 (42%).

- Won toss → batted first → 14 played, 3W / 9L / 2D — win rate 21%
- Won toss → fielded first → 10 played, 5W / 4L / 1NR — win rate 50%

_Reference: lost toss → outcome: 13 played, 5W / 5L / 2D / 1NR — win rate 38%._

### 6e. Team batting & bowling avg per season (1st XI, L+C)

| Season | Wickford CC bat | Rainham CC, Essex bat | Wickford CC bowl | Rainham CC, Essex bowl |
|--:|--:|--:|--:|--:|
| 2024 | 17.90 | 19.78 | 27.56 | 24.11 |
| 2025 | 27.09 | 18.32 | 28.53 | 23.05 |
| 2026 | 40.22 | 9.50 | 25.47 | 18.22 |

## 7. Web / video links

**Official / club channels**
- [Play-Cricket club page](https://wickford.play-cricket.com/home)
- [Club website](https://www.wickfordcc.co.uk/)
- [Twitter/X (@WickfordCC)](https://x.com/wickfordcc)
- [Instagram (@wickfordcc)](https://www.instagram.com/wickfordcc/)
- [Facebook](https://www.facebook.com/WickfordCC/)

**Verified match videos**
- [Wickford livestream (user-supplied, exact match TBC)](https://www.youtube.com/live/GN-Ou--1pwg)
- [Bentley CC 1st XI v Wickford CC Saturday 1st XI (Div 3 Round 18, 7 Sep 2024)](https://www.youtube.com/watch?v=EltwYIp1e6o)
